# librAIan

./: .env.example  .gitignore  .gitlab-ci.yml  PROGRESS.md  README.md  demo.html  demo_1.html  docker-compose.yml  requirements.txt  scenarios.json  scenarios_matrix.json
.claude/: settings.json  (+1 more)
backend/: BACKEND_ARCHITECTURE.md  BACKEND_SUMMARY.md  Dockerfile  check_env.py  full_books_labeled.json  libraiian.db  pyproject.toml  requirements.txt
backend/.claude/: settings.json  settings.local.json
backend/app/: main.py
backend/app/api/: __init__.py  main.py  schemas.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  eval.py  library.py  onboarding.py  profile.py  recommend.py  sessions.py
backend/app/core/: __init__.py  auth.py  config.py  exceptions.py  logger.py  session_logger.py
backend/app/db/: create_db.py  database.py
backend/app/db/database/: __init__.py  models.py  session.py
backend/app/docs/: docsreadme.md  intent_extractor.py  prompts.py
backend/app/models/: .gitkeep  chat_session.py  clova_reranker.py  loan_availability.py  rule_based_reranker.py  user.py
backend/app/modules/RAG/: BM25.py  anchor_book_pipeline.py  final_hybrid.py  retriever.py
backend/app/modules/llm/: __init__.py  cate_depth1.json  category_mapper.py  category_tree.json  clova_client.py  explanation_generator.py  intent_extractor.py
backend/app/modules/profiler/: __init__.py  cold_start.py  profiler.py
backend/app/modules/reranker/: __init__.py  availability.py  bge_reranker.py  clova_reranker.py  cross_encoder.py  hcx_reranker.py  llm_listwise.py  reranker.py
backend/app/modules/response/: generator.py
backend/app/prompts/: __init__.py  clarification.py  extraction.py  question_generation.py  rag.py  response.py  slot.py
backend/app/schemas/: .gitkeep  chat.py  chat_schema.py
backend/app/services/: __init__.py  chat_service.py  explanation.py  loan_availability.py  orchestrator.py  pipeline.py  query_understanding.py
backend/app/templates/: index.html
backend/docs/: modules.md  rag_query_example.py
backend/logs/sessions/: sessions.jsonl
backend/logs/turns/: turns.jsonl
backend/scripts/: benchmark_latency.py
backend/tests/: test_intent_extractor.py
data_pipeline/: collect_data4library.py  pyproject.toml  yes24_crawler.py
data_pipeline/crawlers/: __init__.py  aladin.py  naver.py  pipeline.py  yes24.py
data_pipeline/etl/eval/: eval_set.json
data_pipeline/indexing/: .gitkeep
(+165 files in other folders)
