[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libraian-backend"
version = "0.1.0"
description = "LibrAIan backend API"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "sqlmodel==0.0.14",
    "psycopg2-binary==2.9.9",
    "qdrant-client==1.7.0",
    "sentence-transformers==2.2.2",
    "FlagEmbedding==1.2.10",
    "rank-bm25==0.2.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "isort==5.13.2",
    "mypy==1.7.1"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"