[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libraian-data-pipeline"
version = "0.1.0"
description = "LibrAIan data pipeline"
requires-python = ">=3.10"

dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "sentence-transformers==2.2.2",
    "qdrant-client==1.7.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9"
]